Cambios sobretasa pdf, controller, classes pagador

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Desarrollo": "Server=192.168.20.166;Database=SobreTasaGasolina;User Id=apiUser;Password=1C3r012021*/-;"
+    "Desarrollo": "Server=192.168.20.166;Database=SobreTasaGasolina;User Id=apiUser;Password=1C3r012021*/-;",
+    "Produccion": "Server=192.168.20.106;Database=SobreTasaGasolina;User Id=apiUser;Password=!c3r0!2023$%&;"
+
   }
 
 }
